# torDDoS

./: .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml  requirements.txt  torddos.py
api/: Makefile  go.mod  go.sum  main.go
api/handlers/: attack.go  health.go
api/state/: manager.go
lib/: args.py  color.py  tor.py
public/: app.js  index.html  style.css
